# loom-tailcalls

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
demo-loom-flow/: .gitignore  README.md  ROADMAP.md  agent_demo.py  ollama_client.py  requirements.txt  run_all_cases.py
demo-loom-flow/cases/: 01_agent_ollama.py  02_loom_stress_100k.py  03_plain_recursion_fails.py  04_streaming_tailstream.py  05_hooks_and_budget.py  08_explain_tailcalls_smoke.py
docs/: concurrency-contract.md  formal-core.md  linkedin-comment-demo.txt  linkedin-post-ru.md  performance-tracing.md
examples/: agent_loop_with_budget.py  agent_loop_with_hooks.py  agent_tool_loop.py  deep_agent_loop_comparison.py  streaming_agent.py
loom/: __init__.py  tailcalls.py
scripts/: bench_tailcalls.py
tests/: test_benchmark_smoke.py  test_binding_plan.py  test_bytecode_contract.py  test_concurrency_contract.py  test_contract_matrix.py  test_loom_tailcalls.py  test_ollama_contract.py
