[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-tailcalls"
version = "0.1.0"
description = "Async tail-call optimization primitives for Python agent loops."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Loom contributors" }]

[tool.setuptools.packages.find]
include = ["loom*"]
